--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,3 +11,24 @@ services:
       - "3000:3000"
     volumes:
       - ./:/myapp
+    depends_on:
+      - postgres
+    environment:
+      DATABASE_USERNAME: root
+      DATABASE_PASSWORD: password
+      DATABASE_DB_NAME: rails_otel_dev
+
+  postgres:
+    image: postgres:15
+    container_name: postgres
+    restart: always
+    ports:
+      - "5433:5432"
+    environment:
+      - POSTGRES_USER=root
+      - POSTGRES_PASSWORD=password
+      - POSTGRES_DB=postgres
+      - POSTGRES_INITDB_ARGS="--data-checksums"
+    volumes:
+      - ./docker-data/postgres:/var/lib/postgresql/data
+      - ./docker-postgres-init.sql:/docker-entrypoint-initdb.d/docker-postgres-init.sql:ro
